# evolab

./: .clang-format  .clang-tidy  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  justfile  lefthook.yml  temp_test.cpp
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: ci.yml  ci.yml.disabled  code-quality.yml  release.yml
.kiro/specs/evolab/: design.md  overview.md  requirements.md  tasks.md
.kiro/steering/: pr-conventions.md  product.md  structure.md  tech.md
apps/: CMakeLists.txt  tsp_main.cpp
benchmarks/: CMakeLists.txt
cmake/: EvoLabConfig.cmake.in
configs/: README.md  advanced.toml  basic.toml  experimental.toml  high_performance.toml
data/tsplib/: burma14.tsp  simple5.tsp  ulysses16.tsp
docs/: README.md  getting-started.md
docs/examples/: README.md  basic-tsp.cpp  config-based.cpp  parallel-evaluation.cpp
docs/technical-decisions/: README.md  tbb-executor-concurrent-determinism-analysis.md  tbb-executor-thread-safety-analysis.md
include/evolab/: evolab.hpp
include/evolab/config/: config.hpp
include/evolab/core/: concepts.hpp  ga.hpp  population.hpp
include/evolab/io/: tsplib.hpp
include/evolab/local_search/: lk.hpp  two_opt.hpp
include/evolab/operators/: crossover.hpp  mutation.hpp  selection.hpp
include/evolab/parallel/: tbb_executor.hpp
include/evolab/problems/: tsp.hpp
include/evolab/schedulers/: mab.hpp
include/evolab/utils/: candidate_list.hpp  compiler_hints.hpp  distance_cache.hpp  numa_allocator.hpp
tests/: CMakeLists.txt  test_candidate_list.cpp  test_config.cpp  test_config_integration.cpp  test_core.cpp  test_delta_evaluation.cpp  test_helper.hpp  test_lk.cpp  test_lk_integration.cpp  test_numa.cpp  test_operators.cpp  test_parallel.cpp  test_schedulers.cpp  test_tsp.cpp  test_tsplib.cpp
